--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-micro-cpp",
   "version": "0.1.0",
-  "description": "A short description of your language package",
+  "description": "Language grammar for Micro C++",
   "keywords": [
     "language",
     "grammar"
